tests/test_assets/semantic/valid/strings/initializers.cog
string_initializer_ok::() -> void {
    s: u8[6] = "hello";
}

string_initializer_empty::() -> void {
    s: u8[1] = "";
}

string_initializer_escape::() -> void {
    s: u8[3] = "a\n";
}